# ryanorendorff.github.io

./: .gitignore  CNAME  LICENSE  README.md  archive.html  default.nix  flake.nix  index.html  shell.nix
.github/workflows/: Website Compiles.yml
css/: default.css  iosevka-term.css  nord.css  syntax.css
nix/: gitignore.nix  site-src.nix  site.nix  sources.json  src.nix
posts/2020-12-19-dependent-fold/: index.html
posts/2022-11-27-define-once/: index.html
posts/2022-12-16-gpt-agda/: index.html
src/: index.html  index.md  ryanorendorff-website.cabal  site.hs
src/css/: default.css  iosevka-term.css
src/posts/2020-11-30-dependent-fold/: DependentFold.agda  DependentFold.lhs  run.sh
src/posts/2020-12-19-dependent-fold/: DependentFold.lhs  README.md
src/posts/2022-11-27-define-once/: README.md  define-once.ipynb  define-once.md  shell.nix  sticky.md
src/posts/2022-12-16-gpt-agda/: GPTAgda.lagda.md  gpt.agda-lib  shell.nix
src/templates/: archive.html  default.html  post-list.html  post.html
